# grapha

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh  nodus.toml
.github/scripts/: package-release.sh
.github/workflows/: ci.yml  release.yml
docs/: README.CN.md  swift-developer-workflow.md
docs/superpowers/plans/: 2026-03-30-dataflow-superset.md  2026-03-30-indexstore-swiftsyntax.md  2026-03-31-binary-ffi-format.md  2026-04-01-performance-search-crossmodule-mcp.md  2026-04-09-flow-command-ux.md  2026-04-09-repo-smells-scope.md
docs/superpowers/specs/: 2026-03-30-dataflow-superset-design.md  2026-03-31-binary-ffi-format-design.md  2026-04-01-performance-search-crossmodule-mcp-design.md  2026-04-01-xcassets-image-indexing-design.md
grapha/: Cargo.toml
grapha-core/: Cargo.toml
grapha-core/src/: classify.rs  discover.rs  extract.rs  graph.rs  lib.rs  merge.rs  module.rs  normalize.rs  pipeline.rs  plugin.rs
grapha-rust/: Cargo.toml
grapha-rust/src/: lib.rs
grapha-swift/: Cargo.toml  build.rs  build_support.rs
grapha-swift/src/: binary.rs  bridge.rs  classifier.rs  graph_pass.rs  indexstore.rs  lib.rs  module_discovery.rs  swiftsyntax.rs  treesitter.rs
grapha-swift/src/bridge/: tests.rs
grapha-swift/src/indexstore/: tests.rs
grapha-swift/swift-bridge/: Package.resolved  Package.swift
grapha-swift/swift-bridge/.swiftpm/xcode/package.xcworkspace/xcuserdata/wendell.xcuserdatad/: UserInterfaceState.xcuserstate
grapha-swift/swift-bridge/Sources/GraphaSwiftBridge/: Bridge.swift  IndexStoreReader.swift  SwiftSyntaxExtractor.swift
grapha-swift/swift-bridge/Tests/GraphaSwiftBridgeTests/: BridgeExportsTests.swift  IndexStoreBinaryEncodingTests.swift
grapha-swift/tests/: build_modes.rs  extract_swift_semantic_parity.rs
grapha-swift/tests/fixtures/: semantic_parity.swift
grapha/src/: assets.rs  cache.rs  changes.rs  classify.rs  compress.rs  config.rs  delta.rs  discover.rs  error.rs  extract.rs  fields.rs  filter.rs  lib.rs  localization.rs  main.rs  mcp.rs  merge.rs  module.rs  query.rs  recall.rs  render.rs  search.rs  serve.rs  snippet.rs  store.rs  symbol_locator.rs
grapha/src/classify/: pass.rs  rust.rs  swift.rs  toml_rules.rs
grapha/src/compress/: group.rs  prune.rs
grapha/src/extract/: rust.rs  swift.rs
grapha/src/mcp/: handler.rs  types.rs
grapha/src/query/: complexity.rs  context.rs  dataflow.rs  entries.rs  file_symbols.rs  impact.rs  localize.rs  map.rs  origin.rs  reverse.rs  smells.rs  trace.rs  usages.rs
grapha/src/serve/: api.rs
grapha/src/serve/web/: index.html
grapha/src/store/: json.rs  sqlite.rs
grapha/tests/: dataflow_integration.rs  fields_test.rs  integration.rs  snippet_test.rs
grapha/tests/fixtures/: simple.rs  simple.swift
grapha/tests/fixtures/multi/: lib.rs
nodus/commands/: complexity.md  impact.md  index.md  search.md  smells.md
nodus/rules/: grapha-workflow.md
nodus/skills/grapha-workflow/: SKILL.md
src/: classify.rs  config.rs  discover.rs  extract.rs  filter.rs  graph.rs  main.rs  merge.rs  module.rs  progress.rs  query.rs  resolve.rs  search.rs  serve.rs  store.rs
src/classify/: pass.rs  rust.rs  swift.rs  toml_rules.rs
src/compress/: group.rs  prune.rs
src/extract/: rust.rs  swift.rs
src/query/: context.rs  entries.rs  impact.rs  reverse.rs  trace.rs
src/resolve/: rust.rs
src/serve/: api.rs
src/serve/web/: index.html
src/store/: json.rs  sqlite.rs
tests/: dataflow_integration.rs  integration.rs
