[package]
name = "grapha"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-swift = "0.7"
git2 = { version = "0.20", default-features = false }
rusqlite = { version = "0.34", features = ["bundled"] }
tantivy = "0.25"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
