[package]
name = "grapha-core"
version = "0.1.0"
edition = "2024"
description = "Shared graph types and extraction traits for Grapha"
license = "MIT"
repository = "https://github.com/WendellXY/grapha"
homepage = "https://github.com/WendellXY/grapha"
readme = "../README.md"
keywords = ["code-intelligence", "graph", "analysis", "swift", "rust"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
anyhow = "1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
