[package]
name = "grapha"
version = "0.1.0"
edition = "2024"

[dependencies]
grapha-core = { path = "../grapha-core" }
grapha-swift = { path = "../grapha-swift" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
git2 = { version = "0.20", default-features = false }
rusqlite = { version = "0.34", features = ["bundled"] }
tantivy = "0.25"
indicatif = "0.17"
toml = "0.8"
regex = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
