[package]
name = "grapha"
version = "0.1.0"
edition = "2024"
description = "Blazingly fast code intelligence CLI and MCP server for Swift and Rust"
license = "MIT"
repository = "https://github.com/WendellXY/grapha"
homepage = "https://github.com/WendellXY/grapha"
readme = "../README.md"
keywords = ["code-intelligence", "mcp", "analysis", "swift", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
grapha-core = { version = "0.1.0", path = "../grapha-core" }
grapha-rust = { version = "0.1.0", path = "../grapha-rust" }
grapha-swift = { version = "0.1.0", path = "../grapha-swift" }
anyhow = "1"
bincode = "1"
notify = "7"
notify-debouncer-mini = "0.5"
rayon = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
git2 = { version = "0.20", default-features = false }
rusqlite = { version = "0.34", features = ["bundled"] }
tantivy = "0.25"
indicatif = "0.17"
toml = "0.8"
regex = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"
langcodec = "0.11.0"
xcassets = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
